--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             let weight = document.getElementById("weight").value
             let height = document.getElementById("height").value
 
-            let bmi = (weight / ((height / 100) ** 2))
+            let bmi = (weight / ((height / 100) ** 2)).toFixed(2)
 
             let interval = intervals.find(obj => obj.min <= bmi && obj.max >= bmi)
             document.getElementById("result").innerHTML = `BMI: ${bmi} <br> You are: ${interval.categ} ${interval.emoji}`
