--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
             if (document.getElementById("weight").value == "" || document.getElementById("height").value == "") {
                 alert("Please enter your weight and height first")
+                return
             }
 
             let weight = +document.getElementById("weight").value
